--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!doctype html>
 <html>
 <head>
-<title>Our Funky HTML Page</title>
-<meta name="description" content="Our first page">
-<meta name="keywords" content="html tutorial template">
+<title>Home page</title>
 </head>
 <body>
-Testing
+firebase
 </body>
 </html>
